# rust-postgres-crud

./: .sample.env  Cargo.toml
docs/: database.md  rust-project.md
src/: config.rs  main.rs
src/utils/: crud.rs  db.rs  hello.rs  mod.rs
