[package]
name = "rust-postgres-crud"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
hyper = "1.8.1"
serde = "1.0.228"
serde_json = "1.0.145"
sqlx = { version = "0.8.6", default-features = false, features = [
  "postgres",
  "runtime-tokio-rustls",
  "macros",
  "uuid"
] }
tokio = { version = "1.48.0", features = ["full"] }
uuid = "1.18.1"
uuid-extra = "0.0.2"

